--- a/css/style.css
+++ b/css/style.css
@@ -380,3 +380,44 @@ body {
     line-height: 20px;
     color: #262D33;
 }
+.cloths_block {
+    max-width: 1158px;
+    width: 100%;
+    margin: auto;
+}
+.hudie {
+    margin-top: 30px;
+    margin-right: 35px;
+    max-width: 263px;
+    width: 100%;
+    background: url(../img/hudi.png) no-repeat center top 30px;
+    text-align: center;
+}
+.bb {
+    position: relative;
+    top: 18px;
+    right: 90px;
+}
+.h3_clothes {
+    margin-top: 235px;
+    font-family: Roboto Slab;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 25px;
+}
+.p_clothes {
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: #4B5157;
+}
+.price1 {
+    font-family: Lato;
+    font-size: 18px;
+    line-height: 30px;
+}
