--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
     align-items: center;
     padding-top: 90px;
     padding-bottom: 110px;
+    position: relative;
 }
 .section__text {
     max-width: 335px;
@@ -103,12 +104,11 @@ body {
     padding: 10px 25px 10px 35px;
     cursor: pointer;
     height: 40px;
+    position: relative;
 }
 .button_shop::before{
     content: "319$";
-    position: relative;
-    right: 10px;
-    top: 0px;
+    margin-right: 10px;
     width: 33px;
     height: 20px;
 }
@@ -119,8 +119,9 @@ body {
 .sweater::before {
     content: "";
     position: absolute;
-    left: 370px;
-    top: 320px;
+    left: 107px;
+    top: 50%;
+    margin-top: -30px;
     background-image: url(../img/Arrow.svg);
     width: 60px;
     height: 60px;
@@ -129,8 +130,9 @@ body {
 .sweater::after {
     content: "";
     position: absolute;
-    right: 370px;
-    top: 320px;
+    right: 108px;
+    top: 50%;
+    margin-top: -30px;
     background-image: url(../img/Arrowleft.svg);
     width: 60px;
     height: 60px;
@@ -354,6 +356,7 @@ body {
 }
 .clothes {
     padding-top: 60px;
+    padding-bottom: 70px;
 }
 .arrival {
     display: flex;
@@ -420,4 +423,88 @@ body {
     font-family: Lato;
     font-size: 18px;
     line-height: 30px;
+}
+
+.footer_block {
+    background: #8F79D4;
+    padding: 45px 0;
+}
+
+.footer_nav {
+    max-width: 453px;
+    width: 100%;
+}
+
+.container_block {
+    max-width: 1040px;
+    width: 100%;
+    margin: auto;
+}
+
+.nav_f {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+
+a {
+    text-decoration: none;
+}
+
+.a_footer {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #E7D9FF;
+}    
+
+.line {
+    width: 100%;
+    border: 1px solid #D8BFFF;
+    margin-top: 44px;
+    margin-bottom: 25px;
+}
+
+.img_footer {
+    max-width: 17px;
+    width: 100%;
+    height: 17px;
+}
+
+.img_footer:nth-child(1) {
+    max-width: 10px;
+}
+
+.img_footer:nth-child(2) {
+    max-width: 20px;
+}
+
+.socials_block {
+    max-width: 173px;
+    width: 100%;
+}
+
+.socials {
+    max-width: 83px;
+    width: 100%;
+}
+
+.bottom_footer {
+    min-height: 40px;
+}
+
+.pay {
+    align-items: center;
+}
+
+.top {
+    align-items: center;
+    max-width: 88px;
+    width: 100%;
 }
